@@ -1,5 +1,10 @@
 2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/Application.cs, Banter/ConversationManager.cs,
+	  Banter/Conversation.cs: Added create video
+
+2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/Application.cs: removed Chat window from video
 
 2007-06-06  Brady Anderson <banderso@novell.com> 
